2004-06-21  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* configure.in, GNUmakefile.am: handle correctly the "all" and "dist"
	targets, whether or not the doc and sim directories are present in
	the source tree.

2004-06-20  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai: Export interface symbols.

2004-06-19  Philippe Gerum  <rpm@xenomai.org>

	* doc/docbook/docbook-test/xenomai.xml: Refactor the paper
	according to the latest RTAI/Xenomai evolution.

2004-06-18  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.1

2004-06-18  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade the x86 patches to 2.6r5 final. Add
	support for 2.6.7.

	* skins/rtai/syscall.c: Do not compile in unselected optional
	support.
	
	* skins/rtai/syscall.c: Properly handle calls on self task object.

	* skins/rtai/syscall.c: Only fetch objects address but do not lock
	them since the descriptor will be (re-)verified by the syscall,
	and we want the possibly pended object to be destroyable, and
	sleepers to unblock on the XNRMID condition.

	* skins/rtai/registry.c: Implement rt_registry_fetch().

2004-06-17  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Clobber *.o in RTAI_KBUILD_CLEAN.

	* skins/rtai/cond.c: Add condition variable support.

	* skins/rtai/mutex.c: Add mutex support.

	* nucleus/fusion.c (__pthread_set_periodic_rt,
	__pthread_wait_period_rt): Use new nucleus's built-in support for
	periodic timing.

	* skins/rtai/task.c (rt_task_set_periodic, rt_task_wait_period):
	Use new nucleus's built-in support for periodic timing.

	* nucleus/pod.c (xnpod_set_thread_periodic,
	xnpod_wait_thread_period): Add built-in support for periodic
	timing.

	* nucleus/shadow.c: Rollback some changes from the SMP port
	reinstating proper protection around critical sections.

2004-06-16  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/thread.h: Rename thread::timer to thread::rtimer
	for "resource timer" in order to comply with the other timer